<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PullToZoomView</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Code</string>
    <string name="title_pull_to_zoom_list_view">ZoomListView</string>
    <string name="title_pull_to_zoom_scroll_view">ZoomScrollView</string>
    <string name="title_pull_to_zoom_recycler_view">ZoomRecyclerView</string>
    <string name="action_normal">Normal</string>
    <string name="action_parallax">Parallax</string>
    <string name="action_show_head">Show Head</string>
    <string name="action_hide_head">Hide Head</string>
    <string name="action_disable_zoom">Disable Zoom</string>
    <string name="action_enable_zoom">Enable Zoom</string>

</resources>
